[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sourced/Sprites/goat.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Sheep/Sheep.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0263

[sub_resource type="CircleShape2D" id=2]
radius = 300.0

[node name="Sheep" type="KinematicBody2D" groups=["sheeps"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
shape = SubResource( 2 )

[node name="UpdateMovementTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_DetectionArea_area_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="UpdateMovementTimer" to="." method="_on_UpdateMovementTimer_timeout"]
